# risuto

./: .envrc  .gitignore  .ripgreprc  Cargo.toml  common.nix  shell.nix
migrations/2022-09-20-204332_create_user/: up.sql
nix/: default.nix  pkgs.nix  sources.json
risuto-api/: Cargo.toml
risuto-api/src/: action.rs  auth.rs  comment.rs  db.rs  error.rs  event.rs  lib.rs  query.rs  search.pest  search.rs  tag.rs  task.rs  user.rs
risuto-app/: build.sh  config.xml  package-lock.json  package.json
risuto-client/: Cargo.toml
risuto-client/src/: comment.rs  db.rs  lib.rs  order.rs  query.pest  query.rs  search.pest  search.rs  task.rs
risuto-ctl/: Cargo.toml
risuto-ctl/src/: main.rs
risuto-mock-server/: Cargo.toml
risuto-mock-server/src/: lib.rs
risuto-server/: Cargo.toml  reset-test-db.sql  test-data.sql
risuto-server/migrations/: 20220920010101_create-users.up.sql  20220920213121_create-users.up.sql  20220920213226_add-admin-user.down.sql  20220920213226_add-admin-user.up.sql  20220921020202_create-tags.down.sql  20220921020202_create-tags.up.sql  20220922030303_create-tasks.down.sql  20220922030303_create-tasks.up.sql  20220922185208_create-tasks.down.sql  20220922185208_create-tasks.up.sql  20220925215454_create-perms.down.sql  20220925215454_create-perms.up.sql  20221111040404_task-views.down.sql  20221111040404_task-views.up.sql  20221111195957_task-views.down.sql  20221111195957_task-views.up.sql  20221225030832_event-indexes.sql.down.sql  20221225030832_event-indexes.sql.up.sql  20221231132956_create-searches.down.sql  20221231132956_create-searches.up.sql
risuto-server/migrations/2022-09-20-204332_create_user/: up.sql
risuto-server/migrations/2022-09-20-210531_default-admin-user/: up.sql
risuto-server/src/: db.rs  error.rs  extractors.rs  feeds.rs  fuzz.rs  handlers.rs  main.rs  models.rs  query.rs  schema.rs
risuto-server/src/__fuzz__/fuzz__compare_with_mock/crashes/: crash-04dab8d25a3229c996dd2fe6966916df0e6b8cc7  crash-13987bb49188f7a20ccd69ad6be4c94eaf14af27  crash-15015a61fe3505e5afe8ccb263217adb94263ad5  crash-25b2d354d00497f3e147e243db42c75054332f9c  crash-3dd106201f81784b9c9c180ddb78174019f6304e  crash-4ecc1f75af8890263c244ecb80d8f9c2f3650a64  crash-5fbf626feb5bccc74326ca15cf5f2a3dafe79501  crash-83d97795b6e7aeeba8e76b724213bb587bf9c5ad  crash-87fa20e0923a4be94f87c7f62cf1d853a5d21a2c  crash-9f513159b88c0673203d8920160508b3a2749dc8  crash-ac18b5232b669bd1fc107086e4f916b114818d7d  crash-ad2f4407120bf3e4b5d9b4ab2d0ae64109d5f706  crash-c3a35f841b6e1f75bf952cd0bd2293af609fa745  crash-cbd3468bfc09acf4e465b2c1d011058faf6b47cd  crash-e52ff2bdd645f69f9637dd778c15b1e8c3719f70  crash-eea5bd7403b4fc2efbee831f4cb9d4f411285594  crash-ef4c39c50cf340cf1ed457b5006d8fbb08f27a4c
risuto-server/src/__fuzz__/tests__compare_with_mock/crashes/: crash-32532e7ad372bd00fa0637cce21a243daf2c84ec  crash-737c1cf9301f194c7ddcca4b491d7089622eb467
risuto-web/: Cargo.toml  Trunk.toml  index.html  panic-page.html  style.scss
risuto-web/scss/: bootstrap-colors.scss  style.scss
risuto-web/src/: api.rs  login.rs  main.rs  util.rs
risuto-web/src/ui/: action_submission_spinner.rs  app.rs  event_submission_spinner.rs  login.rs  main_view.rs  mod.rs  new_task_button.rs  offline_banner.rs  search_bar.rs  search_list.rs  settings_menu.rs  tag_list.rs  task_list.rs  task_list_item.rs
src/: schema.rs
tests/: Cargo.toml
