[package]
name = "risuto-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.58"
# TODO: remove once these PRs land TODO
bolero = { git = "https://github.com/Ekleog/bolero", rev = "12ab0cc90a6a6924447190feec64fa9069cb07ab" }
chrono = { version = "0.4.22", features = ["arbitrary", "serde"] }
# TODO: remove once this PR lands https://github.com/chronotope/chrono-tz/pull/124
chrono-tz = { git = "https://github.com/Ekleog/chrono-tz", rev = "d9be1348755f9b6300d363babd0862f20d4ae54d", features = ["arbitrary", "serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.2", features = ["arbitrary", "serde", "v4"] }
