[package]
name = "risuto-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.58"
chrono = "0.4.23"
lazy_static = "1.4"
pest = "2.5"
pest_derive = "2.5"
risuto-api = { path = "../risuto-api" }
tantivy = { version = "0.19.0", default-features = false, features = ["stopwords"] }
tracing = "0.1.36"
