[package]
name = "risuto-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bolero.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
im.workspace = true
lazy_static.workspace = true
pest.workspace = true
pest_derive.workspace = true
risuto-api.workspace = true
serde.workspace = true
tantivy.workspace = true
tracing.workspace = true
