[package]
name = "risuto-server"
version = "0.1.0"
edition = "2021"

[dependencies]
risuto-api = { path = "../risuto-api" }

anyhow = "1.0"
axum = "0.5.16"
axum-macros = "0.2.3"
base64 = "0.13.0"
chrono = "0.4.22"
futures = "0.3.25"
sqlx = { version = "0.6.2", features = ["chrono", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
