[package]
name = "risuto-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
axum.workspace = true
base64.workspace = true
bcrypt.workspace = true
bolero.workspace = true
chrono.workspace = true
futures.workspace = true
risuto-api.workspace = true
serde_json.workspace = true
sqlx.workspace = true
structopt.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
risuto-mock-server.workspace = true
