[package]
name = "risuto-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
futures.workspace = true
getrandom = { workspace = true, features = ["js"] }
gloo-storage.workspace = true
lazy_static.workspace = true
num.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
risuto-client.workspace = true
serde.workspace = true
serde_json.workspace = true
sortable-js.workspace = true
tracing.workspace = true
tracing-wasm.workspace = true
yew.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-timer.workspace = true
web-sys.workspace = true
whoami.workspace = true
ws_stream_wasm.workspace = true
